--- a/index.html
+++ b/index.html
@@ -151,8 +151,17 @@
 
 <!-- Sezione 3 -->
         <section>
-            <div>
-                ddd
+
+            <div class="contenitore-sezione3">
+                <div class="sezione1-contenitore3">
+                    <img src="img/partner.png" width="100%" alt="">
+                </div>
+                <div class="sezione2-contenitore3">
+                    <h3>Entra in contatto con Dropbox</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum, facilis porro? Placeat sunt modi recusandae numquam, ratione iure corporis aspernatur assumenda libero, veniam eveniet soluta laboriosam eaque ab laborum asperiores.</p>
+                    <button class="buttonpartner">Trova un partner</button>
+                </div>
+    
             </div>
         </section>
 
